--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <button class="box" id="green"></button>
         <button class="box" id="yellow"></button>
     </div>
-    <button id="relod">RELOD</button>
+    <button id="relod">RELOAD</button>
     <script>
         let buttons = document.querySelectorAll('.box');
         let body = document.querySelector('body');
